@@ -8,6 +8,7 @@
   * Add `-F` option: `--ruri-fetch`.
   * Add `-x` option: `--disable-network`.
   * Add `-C` option: `--correct-config`
+  * `-c` option can now recognize other args and command to run.
   * Rewrite cgroup support, add cpupercent limit support.
   * Change MAX_MOUNTPOINTS AND MAX_ENVS from 128*2 to 512*2.
   * Auto kill all processes in container when umounting container.
